--- a/BOM-EVENT学习/2-文档宽高及窗口事件.html
+++ b/BOM-EVENT学习/2-文档宽高及窗口事件.html
@@ -35,6 +35,8 @@
 		document.documentElement.offsetHeight;(子元素的margin/padding/border) ie 不认
 		document.body.offsetHeight;(推荐使用这个)
 
+		offsetLeft/offsetTop 整个块的的距离
+
 		---------------------------------------------------------------------
 		onscroll:当滚动条滚动的时候触发
 		onresize:当可视区域变化的时候触发
